--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    }
+  },
   "python.pythonPath": "python-venv/bin/python",
   "python.linting.flake8Enabled": true,
   "python.linting.pylintEnabled": false,
