fix: repair python file structure
Rename scripts to python. Within python all python modules are in the
lumifit package, while scripts reside in the python directory. The long
term idea is to move most of the scripts to modules, taking over that
responsibility.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
       "source.organizeImports": true
     }
   },
-  "python.pythonPath": "python-venv/bin/python",
+  "python.pythonPath": "pyvenv/bin/python",
   "python.linting.flake8Enabled": true,
   "python.linting.pylintEnabled": false,
   "python.linting.enabled": true,
