--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = lumifit
-long_description = file: README.md
+long_description = file: python/README.md
 version = 0.0.1
 
 [options]
@@ -8,4 +8,10 @@ python_requires = >=3.6
 setup_requires = wheel
 install_requires =
   attrs
-packages = scripts
+packages = find:
+package_dir =
+    =python
+
+[options.packages.find] #optional
+where=python
+include=lumifit
