--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   },
   "python.pythonPath": "pyvenv/bin/python",
   "python.linting.flake8Enabled": true,
-  "python.linting.pylintEnabled": false,
+  "python.linting.pylintEnabled": true,
   "python.linting.enabled": true,
   "files.associations": {
     "ostream": "cpp",
@@ -81,6 +81,6 @@
   },
   "cmake.configureOnOpen": true,
   "python.formatting.provider": "black",
-  //"editor.formatOnSave": true,
+  "editor.formatOnSave": true,
   "python.linting.mypyEnabled": true
 }
