updated example sim and config params

--- a/python/recoparams.config
+++ b/python/recoparams.config
@@ -5,7 +5,11 @@
     "num_events_per_sample": 1000,
     "num_samples": 1,
     "output_dir": "",
-    "reco_ip_offset": null,
+    "reco_ip_offset": [
+        0,
+        0,
+        0
+    ],
     "track_search_algo": "CA",
     "use_m_cut": false,
     "use_xy_cut": false
