added missing entries to fitconfig fast

--- a/fitconfig-fast.json
+++ b/fitconfig-fast.json
@@ -36,9 +36,11 @@
 
 	     "acceptance_correction_active": true,
 	     "acceptance_interpolation": "CONSTANT",
+        "automatic_acceptance_boundary_finding_active": true,
 	     "automatic_acceptance_shifting_active": false,
 	     "clean_lower_acceptance": false,
-
+        "acceptance_bound_low": 0.002,
+	     "acceptance_bound_high": 0.01,
 	     "resolution_smearing_active": true,
 	     
 	     "inelastic_background_model_active": true,
