lib path must be in LD_LIBRARY_PATH

--- a/lmdEnvFile.env
+++ b/lmdEnvFile.env
@@ -4,3 +4,4 @@ PATH="/cluster/easybuild/broadwell/software/AppTainer/1.0.1/bin:/home/roklasen/.
 LMDFIT_BUILD_PATH="/home/roklasen/LuminosityFit/build"
 LMDFIT_SCRIPTPATH="/home/roklasen/LuminosityFit/python"
 LMDFIT_MACROPATH="/home/roklasen/PandaRoot/macro/detectors/lmd"
+LD_LIBRARY_PATH="/home/roklasen/LuminosityFit/build/lib"
