--- a/lmdEnvFile.env
+++ b/lmdEnvFile.env
@@ -1,7 +1,7 @@
-VMCWORKDIR="/home/roklasen/PandaRoot"
-LMDFIT_DATA_DIR="/lustre/miifs05/scratch/him-specf/paluma/roklasen/LumiFit"
-PATH="/cluster/easybuild/broadwell/software/AppTainer/1.0.1/bin:/home/roklasen/.local/bin:/usr/share/Modules/bin:/usr/lpp/mmfs/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/var/cfengine/bin:/home/roklasen/bin:/cvmfs/fairsoft.gsi.de/debian10/fairsoft/apr21/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-LMDFIT_BUILD_PATH="/home/roklasen/LuminosityFit/build"
-LMDFIT_SCRIPTPATH="/home/roklasen/LuminosityFit/python"
-LMDFIT_MACROPATH="/home/roklasen/PandaRoot/macro/detectors/lmd"
-LD_LIBRARY_PATH="/home/roklasen/LuminosityFit/build/lib"
+VMCWORKDIR="/home/jenfrech/KoalaSoft"
+LMDGIT_DATA_DIR="/lustre/miifs05/scratch/him-specf/koala/LumiFit"
+PATH="/cluster/easybuild/broadwell/software/AppTainer/1.0.1/bin:/home/jenfrech/.local/bin:/usr/share/Modules/bin:/usr/lpp/mmfs/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/var/cfengine/bin:/home/jenfrech/bin:/cvmfs/fairsoft.gsi.de/debian10/fairsoft/apr21/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+LMDFIT_BUILD_PATH="/home/jenfrech/LuminosityFit/build"
+LMDFIT_SCRIPTPATH="/home/jenfrech/LuminosityFit/python"
+LMDFIT_MACROPATH="/home/jenfrech/PandaRoot/macro/detectors/lmd"
+LD_LIBRARY_PATH="/home/jenfrech/LuminosityFit/build/lib"
