--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,8 @@
 from rklasen/fairroot:mini
 
-COPY requirements.txt /requirements.txt
+COPY requirements.txt docker/rc.append /tmp/
 
-RUN apt-get install -y python3-pip
-
-RUN pip3 install -r /requirements.txt
-
-RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.7 2
+RUN apt-get install -y python3-pip \
+    && pip3 install -r /tmp/requirements.txt \
+    && update-alternatives --install /usr/bin/python python /usr/bin/python3.7 2 \
+    && cat /tmp/rc.append >> /mnt/work/.bashrc
