changed devcontainer for more general paths

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,42 +2,42 @@
   "image": "rklasen/lmdfit:miniApr21p2",
   // "dockerFile": "docker/Dockerfile",
   "mounts": [
-    "source=/media/CacheDrive2TB/Arbeit/PandaRoot,target=/mnt/work/PandaRoot,type=bind,consistency=cached",
-    "source=${localEnv:HOME}/.Xauthority,target=/mnt/work/.Xauthority,type=bind",
     "source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind",
     "source=/cvmfs,target=/cvmfs,type=bind",
-    "source=/media/CacheDrive2TB/Arbeit/LmdFitData,target=/mnt/work/LmdFitData,type=bind",
+    "source=${localEnv:PANDAROOTDIR},target=/mnt/work/PandaRoot,type=bind,consistency=cached",
+    "source=${localEnv:HOME}/.Xauthority,target=/mnt/work/.Xauthority,type=bind",
+    "source=${localEnv:LMD_FIT_DATA},target=/mnt/work/LmdFitData,type=bind",
     "source=/mnt/himsterData/roklasen,target=/mnt/work/himsterData,type=bind"
   ],
   "containerUser": "pandauser",
   "workspaceMount": "source=${localWorkspaceFolder},target=/mnt/work/LuminosityFit,type=bind,consistency=cached",
   "workspaceFolder": "/mnt/work/LuminosityFit",
   "extensions": [
-	"ms-vscode.cmake-tools",
-	"ms-toolsai.jupyter",
-	"ms-python.vscode-pylance",
-	"ms-python.python",
-	"ms-vscode.cpptools",
-	"ms-vscode.cpptools-extension-pack",
-	"josetr.cmake-language-support-vscode",
-	"ms-azuretools.vscode-docker",
-	"ms-toolsai.jupyter-keymap",
-	"xaver.clang-format",
-	"twxs.cmake",
-	"ms-toolsai.jupyter-renderers",
-	"yzhang.markdown-all-in-one",
-	"DavidAnson.vscode-markdownlint",
-	"esbenp.prettier-vscode",
-	"bierner.markdown-mermaid",
-	"donjayamanne.githistory",
-	"eamodio.gitlens",
-	"streetsidesoftware.code-spell-checker",
-	"oderwat.indent-rainbow",
-	"ms-python.black-formatter",
-	"GitHub.vscode-pull-request-github",
-	"ms-python.isort",
-	"Gruntfuggly.todo-tree",
-	"vscode-snippet.snippet"
-],
+    "ms-vscode.cmake-tools",
+    "ms-toolsai.jupyter",
+    "ms-python.vscode-pylance",
+    "ms-python.python",
+    "ms-vscode.cpptools",
+    "ms-vscode.cpptools-extension-pack",
+    "josetr.cmake-language-support-vscode",
+    "ms-azuretools.vscode-docker",
+    "ms-toolsai.jupyter-keymap",
+    "xaver.clang-format",
+    "twxs.cmake",
+    "ms-toolsai.jupyter-renderers",
+    "yzhang.markdown-all-in-one",
+    "DavidAnson.vscode-markdownlint",
+    "esbenp.prettier-vscode",
+    "bierner.markdown-mermaid",
+    "donjayamanne.githistory",
+    "eamodio.gitlens",
+    "streetsidesoftware.code-spell-checker",
+    "oderwat.indent-rainbow",
+    "ms-python.black-formatter",
+    "GitHub.vscode-pull-request-github",
+    "ms-python.isort",
+    "Gruntfuggly.todo-tree",
+    "vscode-snippet.snippet"
+  ],
   "runArgs": ["--network=host"]
 }
