added mypy to devcontainer

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -13,31 +13,32 @@
   "workspaceMount": "source=${localWorkspaceFolder},target=/mnt/work/LuminosityFit,type=bind,consistency=cached",
   "workspaceFolder": "/mnt/work/LuminosityFit",
   "extensions": [
-    "ms-vscode.cmake-tools",
-    "ms-toolsai.jupyter",
-    "ms-python.vscode-pylance",
-    "ms-python.python",
-    "ms-vscode.cpptools",
-    "ms-vscode.cpptools-extension-pack",
-    "josetr.cmake-language-support-vscode",
-    "ms-azuretools.vscode-docker",
-    "ms-toolsai.jupyter-keymap",
-    "xaver.clang-format",
-    "twxs.cmake",
-    "ms-toolsai.jupyter-renderers",
-    "yzhang.markdown-all-in-one",
-    "DavidAnson.vscode-markdownlint",
-    "esbenp.prettier-vscode",
-    "bierner.markdown-mermaid",
-    "donjayamanne.githistory",
-    "eamodio.gitlens",
-    "streetsidesoftware.code-spell-checker",
-    "oderwat.indent-rainbow",
-    "ms-python.black-formatter",
-    "GitHub.vscode-pull-request-github",
-    "ms-python.isort",
-    "Gruntfuggly.todo-tree",
-    "vscode-snippet.snippet"
-  ],
+	"ms-vscode.cmake-tools",
+	"ms-toolsai.jupyter",
+	"ms-python.vscode-pylance",
+	"ms-python.python",
+	"ms-vscode.cpptools",
+	"ms-vscode.cpptools-extension-pack",
+	"josetr.cmake-language-support-vscode",
+	"ms-azuretools.vscode-docker",
+	"ms-toolsai.jupyter-keymap",
+	"xaver.clang-format",
+	"twxs.cmake",
+	"ms-toolsai.jupyter-renderers",
+	"yzhang.markdown-all-in-one",
+	"DavidAnson.vscode-markdownlint",
+	"esbenp.prettier-vscode",
+	"bierner.markdown-mermaid",
+	"donjayamanne.githistory",
+	"eamodio.gitlens",
+	"streetsidesoftware.code-spell-checker",
+	"oderwat.indent-rainbow",
+	"ms-python.black-formatter",
+	"GitHub.vscode-pull-request-github",
+	"ms-python.isort",
+	"Gruntfuggly.todo-tree",
+	"vscode-snippet.snippet",
+	"matangover.mypy"
+],
   "runArgs": ["--network=host"]
 }
