--- a/configs/fitconfig-fast.json
+++ b/configs/fitconfig-fast.json
@@ -26,7 +26,7 @@
          "acceptance_correction_active": true,
          "acceptance_interpolation": "CONSTANT",
          "automatic_acceptance_boundary_finding_active": true,
-         "automatic_acceptance_shifting_active": false,
+         "automatic_acceptance_shifting_active": true,
          "clean_lower_acceptance": true,
          "acceptance_bound_low": 0.002,
          "acceptance_bound_high": 0.01,
