better defaults for fitconfig-fast (see docs)

--- a/configs/fitconfig-fast.json
+++ b/configs/fitconfig-fast.json
@@ -19,15 +19,15 @@
          "beam_div_x": 0.0001,
          "beam_div_y": 0.0001,
          "elastic_data_input_directory": "",
-         "fix_beam_tilts": false,
+         "fix_beam_tilts": true,
          "beam_tilt_x": 0.0,
          "beam_tilt_y": 0.0,
          "fix_ip_offsets": true,
          "acceptance_correction_active": true,
          "acceptance_interpolation": "CONSTANT",
          "automatic_acceptance_boundary_finding_active": true,
-         "automatic_acceptance_shifting_active": true,
-         "clean_lower_acceptance": true,
+         "automatic_acceptance_shifting_active": false,
+         "clean_lower_acceptance": false,
          "acceptance_bound_low": 0.002,
          "acceptance_bound_high": 0.01,
          "resolution_smearing_active": true,
